# Tech-Transfer-ARI

./: .gitignore  .replit  agente_analizador.py  app.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--CONTEXTO-GENERAL-Y-OBJETIVO-DEL-PROYECTO-Rol-del-Usuario-Eres-mi-socio-estrat-gico-en-Openlab-No-1752058744610_1752058744610.txt
